[maven-release-plugin] prepare release ceserver-pcileech-1.0

--- a/pom.xml
+++ b/pom.xml
@@ -9,19 +9,18 @@
   ~ Please see the file LICENSE for more information.
   -->
 
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>iflores</groupId>
     <artifactId>ceserver-pcileech</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <scm>
         <url>https://github.com/isabellaflores/ceserver-pcileech</url>
         <connection>scm:git:git://github.com/isabellaflores/ceserver-pcileech.git</connection>
         <developerConnection>scm:git:git@github.com:isabellaflores/ceserver-pcileech.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>ceserver-pcileech-1.0</tag>
     </scm>
 
     <build>
@@ -60,8 +59,7 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>iflores.ceserver.pcileech.Main</mainClass>
                                 </transformer>
                             </transformers>
